@@ -1,4 +1,5 @@
 1.1.5
+- If in debug mode, do not write audit events to audit system
 
 1.1.4
 - Fix descriptor leak on enqueue failure (Steven Brzozowski)
